Add basic progress bar, colors vars, font

--- a/src/assets/styles/cmps/UserMsg.scss
+++ b/src/assets/styles/cmps/UserMsg.scss
@@ -24,7 +24,7 @@
 }
 
 .user-msg button {
-    background-color: $gray1;
+    // background-color: $gray1;
     padding: 1px 6px;
     border:0;
     border-radius: 50%;
