--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -6,3 +6,10 @@
     // font-family: montserrat;
     // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
 }
+
+@font-face {
+    font-family: gotham-book;
+    src: url('../fonts/Spotify-Font/GothamMediumItalic.ttf');
+}
+
+
