--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -8,11 +8,16 @@ html {
 }
     
 body {
-    max-width: 1024px;
+    // max-width: 1024px;
     margin: 0 auto;
 
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: rem(18px);
+
+
+    background-color: $background-black;
+    color: $white;
+    font-family: gotham-book;
 }
 
 h1, h2, h3, h4, h5, h6 {
