--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,6 +1,6 @@
 .main-container {
-  display: grid;
-  grid-template-columns: 1rem 1fr 1rem;
+  // display: grid;
+  // grid-template-columns: 1rem 1fr 1rem;
 
   > * {
     grid-column: 2;
@@ -31,7 +31,7 @@
 }
 
 .songd-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
+  // display: grid;
+  // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  // grid-gap: 20px;
 }
