--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -12,6 +12,25 @@ $gray2: #aaa;
 $gray3: #777;
 $gray4: #333;
 
+
+// Spotify Colors
+
+$background-black: #191414;
+$green: #1DB954;
+$white: #FFFFFF;
+$grey-light: #B3B3B3;
+$grey-medium: #535353;
+$grey-dark: #282828;
+$dark-mode-background: #121212;
+$dark-mode-hover: #1A1A1A;
+$dark-mode-active: #282828;
+$primary-accent: #1ED760;
+$secondary-accent: #1DB954;
+$danger-red: #E91429;
+$success-green: #1DB954;
+$info-blue: #509BF5;
+$warning-yellow: #FFC107;
+
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
