--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -2,8 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    grid-column: 1 / -1;
     min-height: 3.5rem;
+
 
     padding: rem(10px) 1rem;
     background-color: $clr4;
