--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -4,13 +4,20 @@
 background-color: $background-black;
 
 display: grid;
-grid-template-columns: repeat(3,1fr);
+grid-template-columns: auto 1fr auto;
+align-items: center;
+justify-items: center;
+// display: flex;
+
+// justify-content: space-between;
 
 .song-details-container{
+    // width: 100%;
     display: flex;
     align-items: center;
     justify-items: center;
     gap: 0.5em;
+
 
     .play-bar-cover{
         width: 60px;
@@ -23,29 +30,180 @@ grid-template-columns: repeat(3,1fr);
     }
 }
 
-
-.time-container{
-    display: flex;
-    // align-items: center;
+.control-container{
+    width: 80%;
+    justify-self: center;
+    
+    display: grid;
+    grid-template-rows: repeat(2,auto);
     justify-items: center;
+    align-items: center;
+    
+    .buttons-container{
 
-    gap: 1em;
 
+        // justify-content: space-around;
+
+        // width: 400px;
+        .play-button, .pause-button{
+            i{
+
+                font-size: 2.5em;
+            }
+
+        }
+        i{
+            font-size: 2em;
+            color: $grey-light;
+            transition: 0.2s;
+
+            &:hover{
+                transform: scale(1.1);
+                color: $white;
+            }
+        }
+    }
+
+
+
+    .time-container{
+
+  
+        
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        gap: 1em;
+        width: 100%;
+  
+
+    .time-progress{
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        transition: width 0.25s ease-in-out;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+
+
+        justify-content: end;
+
+        border-radius: 5px;
+        -webkit-appearance: none;
+        background-color: $white; 
+        height: 4px;
+
+        background: linear-gradient(to right, $white 50%, $grey-medium 50%);
+        border-radius: 5px;
+        outline: none;
+
+        i{
+            display: none;
+            position: relative;
+            left: 5px;
+            font-size: 0.8em;
+        }
+
+        &::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: $white; 
+            cursor: pointer;
+            display: none;
+
+          }
+    
+        &:hover{
+            background: linear-gradient(to right, $green 50%, $grey-medium 50%);
+
+            &::-webkit-slider-thumb{
+                display: block;
+            }
+
+        }
+        
+    }
+
+  }
 }
 
-.progress-container {
+
+  .volume-container{
     width: 100%;
-    background-color: $grey-light;
+    background-color: $grey-medium;
     border-radius: 10px;
-    overflow: hidden;
+    // overflow: hidden;
     height: 4px;
     margin-top: 10px;
-  }
-  
-  .progress-bar {
-    height: 100%;
-    background-color: $white; /* Spotify Green */
-    transition: width 0.25s ease-in-out;
-  }
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    &:hover{
+        div{
 
+            i{
+                 display: block;
+     
+             } 
+        }
+     }  
+    
+    .volume-progress{
+        width: 100%;
+        height: 100%;
+        // background-color: $white; 
+        border-radius: 10px;
+        transition: width 0.25s ease-in-out;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+
+        justify-content: end;
+
+        border-radius: 5px;
+        -webkit-appearance: none;
+        background-color: $white; 
+        height: 4px;
+
+        background: linear-gradient(to right, $white 50%, $grey-medium 50%);
+        border-radius: 5px;
+        outline: none;
+
+        i{
+            display: none;
+            position: relative;
+            left: 5px;
+            font-size: 0.8em;
+        }
+
+        &::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: $white; 
+            cursor: pointer;
+            display: none;
+
+          }
+    
+        &:hover{
+            background: linear-gradient(to right, $green 50%, $grey-medium 50%);
+
+            &::-webkit-slider-thumb{
+                display: block;
+            }
+
+        }
+        
+    }
+
+  }
 }
+
+
