Fix socket issue

--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -73,6 +73,7 @@ justify-items: center;
 
 
 
+
     .time-container{
 
   
@@ -138,6 +139,12 @@ justify-items: center;
   }
 }
 
+.buttons-volume-container{
+
+.buttons-container{
+    display: flex;
+
+}
 
   .volume-container{
     width: 100%;
@@ -211,6 +218,7 @@ justify-items: center;
     }
 
   }
+}
 }
 
 
