--- a/src/assets/styles/RootCmp.scss
+++ b/src/assets/styles/RootCmp.scss
@@ -1,3 +1,5 @@
+
+
 .app {
   &.main-layout {
     display: grid;
@@ -7,11 +9,11 @@
     header {
       grid-column: 1 / -1;
     }
+  }
 
-
-    // .app-footer{
-    //   grid-column: 1 / -1;
-    // }
-
+  .main-content{
+    background-color:$background-black;
+    border-radius: 0.5rem;
+    height:80vh;
   }
 }
