small fixes for side bar and main page designs

--- a/src/assets/styles/RootCmp.scss
+++ b/src/assets/styles/RootCmp.scss
@@ -15,5 +15,7 @@
     background-color:$background-black;
     border-radius: 0.5rem;
     height:80vh;
+    width:98%;
+    margin: 1rem 0;
   }
 }
