--- a/src/assets/styles/cmps/AppLibrary.scss
+++ b/src/assets/styles/cmps/AppLibrary.scss
@@ -5,7 +5,7 @@
   // justify-content: space-between;
 
   background-color:$dark-mode-background;
-  width:17.74rem;
+  width:98%;
   // height:7.625rem;
     height:fit-content;
   padding: 0.5rem 0.75rem;
