--- a/src/assets/styles/cmps/AppNav.scss
+++ b/src/assets/styles/cmps/AppNav.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   background-color: $dark-mode-background;
-  width:17.74rem;
+  width:98%;
   height:7.625rem;
   // padding: 0.5rem 0.75rem;
   border-radius: 0.5rem;
@@ -11,7 +11,7 @@
   .home-nav-container{
     display: flex;
     align-items: center;
-    max-width:8rem;
+    width:100%;
     height:2.5rem;
 
           &:hover{
