--- a/src/assets/styles/cmps/CarFilter.scss
+++ b/src/assets/styles/cmps/CarFilter.scss
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 5em 5em auto;
   align-items: center;
   gap: 0 0.5em;
+  border-radius: 0.5rem;
 
   background-color: $clr4;
   padding: 0.5em;
