--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -1,4 +1,8 @@
 .app-footer{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
     display: flex;
     align-items: center;
     justify-content: space-between;
