--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,35 +1,170 @@
 .app-header {
     display: flex;
-    min-height: 3.5rem;
+    // min-height: 3.5rem;
+    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
+    justify-items: center;
 
     background-color: $clr4;
-    padding: rem(10px) 1rem;
+    margin: 0px 1.6rem;
+    height: 65px;
+    background-color:black;
+    
+    .app-logo{
+        color: white;
+        // font-size: 1.5em;
+    }
     
     nav {
         display: flex;
-        width: 100%;
+        // width: 100%;
+        // height: 100%;
+        // height: 36px;
         align-items: center;
+        align-items: center;
+        justify-items: center;
         gap: 1em;
         
-        font-size: .8em;
+        // font-size: .8em;
 
         .active {
-            color: $clr1;
-        }
+            // color: $clr1;
 
+        }
+        align-self: center;
+  
         .logo {
-            font-size: 1.4em;
+            font-size: 1.8em;
             font-weight: bold;
-            margin-inline-end: 2em;
+            // margin-inline-end: 2em;     
+               height: 100%;
+
+               display: flex;
+               align-items: center;
+               
+            }
+
+            
+            
+            button {
+                margin-inline-end: 0;
+            }
         }
 
-        .login-link {
-            margin-inline-start: auto;
+        .home-search-container{
+            display: flex;
+            align-items: center;
+            justify-items: center;
+
+            gap: 0.6em;
+
+            cursor: pointer;
+
+         
+
+            .home-button-container{
+                background-color: $grey-dark;
+                padding: 0.6em;
+                display: flex;
+                align-items: center;
+                justify-items: center;
+                // height: 50px;
+                // width: 50px;
+                border-radius: 50px;
+                color: $grey-light;
+                
+                .home-button{
+                    font-size: 1.5em;
+                    justify-self: center;
+
+                }
+                .home-button.active{
+                    color: $white;
+                }
+            }
+            .search-container{
+              
+                padding: 0.6em;
+                background-color: $grey-dark;
+                border-radius: 50px;
+                display: flex;
+                align-items: center;
+                justify-items: center;
+                gap: 0.6em;
+                transition: 0.2s;
+                // border: 2.5px solid transparent;
+
+
+                
+                &:hover{
+                    background-color: $grey-medium;
+                    border: 1px solid $grey-light;
+                }
+
+                &:has(input:focus){
+                border: 2.5px solid $white;
+
+       
+                }
+
+                input{
+                   background-color: transparent;
+                   border: none; 
+                   min-width: 25vw;
+                   color: $white;
+
+                    font-size: 0.9em;
+
+                    cursor: pointer;
+                   &:focus{
+                    outline: none;
+               
+
+                   }
+                }
+                ::placeholder {
+                    color: $grey-light;
+                    opacity: 1; /* Firefox */
+                  }
+
+                .icon{
+                    font-size: 1.5em;
+                    color: $grey-light;
+                    &:hover{
+                        color: $white;
+                        
+                    }
+                    
+                }
+                .browse{
+
+                    &:hover{
+
+                        transform: scale(1.05);
+                    }
+                }
+            }
         }
 
-        button {
-            margin-inline-end: 0;
-        }
+
+        .login-link{
+        font-size: 1.8em;
+        font-weight: bold;
+        border-radius: 50%;
+        padding: 5px;
+            
+        //    height: 100%;
+            background-color: $grey-medium;
+            color: white;
+            display: flex;
+            align-items: center;
+
+    }
+
+    .login-link {
+        // margin-inline-start: auto;
     }
 
     .user-info {
