--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -17,7 +17,7 @@
     .station-container{
         // width: 20vw;
 
-        background-color: $green;
+        color: $white;
         background-color: rgba(255, 255, 255, 0.15);
         display: grid;
         grid-template-columns: auto 1fr 4vw;
