--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -83,14 +83,14 @@ justify-items: center;
         justify-items: center;
         gap: 1em;
         width: 100%;
-  
+
 
     .time-progress{
         width: 100%;
         height: 100%;
         border-radius: 10px;
         transition: width 0.25s ease-in-out;
-        cursor: pointer;
+
         display: flex;
         align-items: center;
 
@@ -120,7 +120,7 @@ justify-items: center;
             height: 16px;
             border-radius: 50%;
             background: $white; 
-            cursor: pointer;
+            cursor: default;
             display: none;
 
           }
@@ -145,10 +145,21 @@ justify-items: center;
     justify-items: center;
     gap: 0.5em;
 
+    button{
+        &:hover{
+            i{
+                color: $white;
+                transform: scale(1.05);
+
+            }
+        }
+    }
+
 
 i{
 
     min-width: 17px;
+    color: $grey-light;
 }
 
   .volume-container{
