Add StationDetails page

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -44,3 +44,4 @@
 @import "cmps/SideBar.scss";
 @import "cmps/AppLibrary.scss";
 @import "cmps/LikedSongs.scss";
+@import "pages/StationDetails.scss";
