--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -72,9 +72,13 @@
     }
         }
 
-        b{
+   
+        a{
+            color: $white;
+            text-decoration: none;
 
         }
+
         .station-cover{
             padding: 5px;
             border-radius: 5px;
