--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -8,19 +8,19 @@
 }
 
 @font-face {
-    font-family: 'Gotham-Light';
+    font-family: 'GothamLight';
     src: url('public/fonts/Gotham-Light.otf') format('opentype');
 }
 @font-face {
-    font-family: 'Gotham-Book';
+    font-family: 'GothamBook';
     src: url('public/fonts/Gotham-Book.otf') format('opentype');
 }
 @font-face {
-    font-family: 'Gotham-Medium';
+    font-family: 'GothamMedium';
     src: url('public/fonts/Gotham-Medium.otf') format('opentype');
 }
 @font-face {
-    font-family: 'Gotham-Black-bold';
+    font-family: 'GothamBlackBold';
     src: url('public/fonts/Gotham-Black.otf') format('opentype');
 }
 
