--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -7,6 +7,8 @@ display: grid;
 grid-template-columns: auto 1fr auto;
 align-items: center;
 justify-items: center;
+
+padding: 0px 0.5em 1em 0.5em;
 // display: flex;
 
 // justify-content: space-between;
@@ -17,16 +19,29 @@ justify-items: center;
     align-items: center;
     justify-items: center;
     gap: 0.5em;
+    align-self: end;
 
 
     .play-bar-cover{
-        width: 60px;
+        width: 50px;
         border-radius: 5px;
     }
 
     .song-text-container{
         display: flex;
         flex-direction: column;
+
+        b{
+            font-size: 0.8em;
+            font-family: 'GothamBook'; 
+        }
+        
+        span{
+            font-size: 0.8em;
+            font-family: 'GothamLight'; 
+            color: $grey-light;
+            
+        }
     }
 }
 
