--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -258,6 +258,10 @@
         .name-artist-container{
           display: flex;
           flex-direction: column;
+          .song-name{
+            color: $white;
+            font-size: 1.15em;
+          }
         }
       }
       *{
