--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -45,3 +45,4 @@
 @import "cmps/AppLibrary.scss";
 @import "cmps/LikedSongs.scss";
 @import "pages/StationDetails.scss";
+@import "pages/ItemDetails.scss";
