--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -226,7 +226,59 @@
 
         &:hover{
           background-color: rgba(255, 255, 255, 0.1);
+          .item-idx-container{
+            display: none;
+          }
+          .play-pause-container{
+            display: flex;
+          }
         }
+
+        .idx-play-container{
+          width: 2em;
+          display: flex;
+          align-items: center;
+          justify-items: center;
+          justify-self: center;
+
+        }
+        .item-idx-container{
+          // font-size: 1.3em;
+          font-size: 1.8em;
+          color: #999; /* Light gray color for the index */
+
+          // margin-right: 25px;
+          display: flex;
+          // align-items: center;
+
+          width: 40px;
+        }
+
+        .play-pause-container{
+          display: none;
+          align-items: center;
+          justify-items: center;
+
+
+          .play-button, .pause-button{
+            // font-size: 2.5em;
+
+
+            color: $white;
+            width: 40px;
+            height: 40px;
+
+            border: none;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            transition: background-color 0.3s ease;
+
+          }
+        }
+
       }
 
       .song-title-container{
