--- a/src/assets/styles/pages/ItemDetails.scss
+++ b/src/assets/styles/pages/ItemDetails.scss
@@ -40,7 +40,7 @@
       object-fit: scale-down;
 
       margin: 1em 0.5em 0.5em 1em;
-      background-color: $green;
+      // background-color: $green;
     }
     .title-container{
  
