--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -42,7 +42,7 @@
       object-fit: scale-down;
 
       margin: 1em 0.5em 0.5em 1em;
-      background-color: $green;
+      // background-color: $green;
     }
     .title-container{
  
@@ -294,7 +294,7 @@
           height: calc(4vw);
           width: 4vw;
           object-fit:scale-down;
-          background-color: $green;
+          // background-color: $green;
 
           max-width: 50px;
           max-height: 50px;
