--- a/src/assets/styles/cmps/AppLibrary.scss
+++ b/src/assets/styles/cmps/AppLibrary.scss
@@ -94,6 +94,7 @@ border-radius: 0.5rem;
         width: 50px;
         height: 50px;
         object-fit:scale-down;
+        border-radius: 5px;
       }
       
       background-color: $green;
