--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -304,7 +304,9 @@
         .name-artist-container{
           display: flex;
           flex-direction: column;
+     
           .song-name{
+            width: fit-content;
             color: $white;
             font-size: 1.15em;
           }
