--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -193,7 +193,7 @@
         display: flex;
         align-items: center;
         justify-items: center;
-        gap: 10px;
+        gap: 1em;
 
       }
     }
@@ -252,6 +252,11 @@
           // align-items: center;
 
           width: 40px;
+
+          .playing-animation{
+
+            width: 40px;
+          }
         }
 
         .play-pause-container{
@@ -283,7 +288,9 @@
 
       .song-title-container{
         grid-column: 1/2;
-        display: flex;
+        // display: flex;
+        display: grid;
+        grid-template-columns: 30px auto 1fr;
         align-items: center;
         justify-items: center;
         justify-self: start;
@@ -308,7 +315,10 @@
           .song-name{
             width: fit-content;
             color: $white;
-            font-size: 1.15em;
+            font-size: 1.2em;
+          }
+          .playing{
+            color: $green;
           }
         }
       }
