--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -61,7 +61,12 @@ padding: 0px 0.5em 1em 0.5em;
         display: flex;
         align-items: center;
         justify-items: center;
+        gap: 1em;
         // width: 400px;
+        .button{
+            margin: 0px;
+            padding: 0px;
+        }
         .play-button, .pause-button{
 
             background-color: $white;
@@ -69,10 +74,13 @@ padding: 0px 0.5em 1em 0.5em;
             font-size: 2em;
             border: none;
             border-radius: 50%;
-            padding: 7.5px 2.5px 7.5px 7.5px;
+            padding: 2px 1px 2px 2px;
             // padding: 10px;
-            width: 50px;
-            height: 50px;
+            width: 35px;
+            height: 35px;
+            display: flex;
+            align-items: center;
+            justify-items: center;
             cursor: pointer;
             transition: 0.1s;
             &:hover{
@@ -80,15 +88,15 @@ padding: 0px 0.5em 1em 0.5em;
                 transform: scale(1.05);
             }
             
-            
         }
         .pause-button{
-
-            padding: 7.5px;
+            
+            // padding: 7.5px;
         }
+     
 
         .button:not(.pause-button, .play-button){
-            font-size: 1.5em;
+            font-size: 1.3em;
             color: $grey-light;
             transition: 0.2s;
             
@@ -99,10 +107,34 @@ padding: 0px 0.5em 1em 0.5em;
         }
         .button.next-button, .button.back-button{
 
-            font-size: 2em;
+            font-size: 1.8em;
         }
-        
+        .button.active{
+                color: $green;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // gap: 1em;
+                margin: 0px;
+                padding: 0px;
+                &::after{
+                    content: '';
+                    height: 5px;
+                    width: 5px;
+                    border-radius: 50px;
+                    background-color: $green;
+                    // position: absolute;
+                }
+                &:hover{
+                    color: $green;
+
+                }
+        }
+
+  
     }
+
+  
 
 
 
