--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -63,6 +63,8 @@ padding: 0px 0.5em 1em 0.5em;
         justify-items: center;
         gap: 1em;
         // width: 400px;
+        margin: 0px;
+        padding-top: 1em;
         .button{
             margin: 0px;
             padding: 0px;
@@ -149,6 +151,12 @@ padding: 0px 0.5em 1em 0.5em;
         gap: 1em;
         width: 100%;
 
+        span{
+            font-family: 'GothamLight';
+            font-size: 0.7em;
+            color: $grey-light;
+        }
+
 
     .time-progress{
         width: 100%;
@@ -205,10 +213,11 @@ padding: 0px 0.5em 1em 0.5em;
 }
 
 .buttons-volume-container{
+    align-self: end;
     display: flex;
     align-items: center;
     justify-items: center;
-    gap: 0.5em;
+    // gap: 0.5em;
 
     button{
         &:hover{
@@ -233,7 +242,7 @@ i{
     border-radius: 10px;
     // overflow: hidden;
     height: 4px;
-    margin-top: 10px;
+    margin-top: 2px;
     display: flex;
     align-items: center;
     justify-items: center;   
