Change riuting to searchIndex change scss files render the stationType in searchIndex comment out some console logs in service and action of stations

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,7 +17,7 @@
 
 @import "pages/AboutUs";
 @import "pages/HomePage";
-@import "pages/CarIndex";
+@import "pages/SearchIndex";
 @import "pages/ReviewIndex";
 @import "pages/UserDetails";
 @import "pages/TaskDetails";
