--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -8,7 +8,7 @@
   }
   
   .station-header{
-    background: linear-gradient(180deg, #7300ff, #191414);
+    // background: linear-gradient(180deg, #7300ff, #191414);
     // background: linear-gradient(180deg, #7300ffd3, #7300ff31);
 
     display: grid;
