--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -1,10 +1,9 @@
 .home-container{
-    background: linear-gradient(0deg, $background-black 60%, rgb(30, 0, 69) 90%, #4B0E8B 100%);   
+    // background: linear-gradient(0deg, $background-black 60%, rgb(30, 0, 69) 90%, #4B0E8B 100%);   
      height:80vh;
     overflow-y: auto;
     border-radius: 0.5rem;
     container-type: inline-size;
-
 
 }
 
@@ -22,7 +21,14 @@
         font-family: 'GothamBook';
         font-size: 0.8em;
         font-weight: 100;
+        transition: 0.2s;
 
+        &:hover{
+
+            background-color: rgba(255, 255, 255, 0.25);
+
+
+        }
 
     }
 
@@ -80,7 +86,7 @@
             }  
              .playing-animation{
                 display: none;
-    }
+            }
         }
 
    
