--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -30,6 +30,7 @@
 @import "cmps/AppHeader";
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
+@import "cmps/SearchDynamicCmp.scss";
 
 @import "cmps/CarFilter";
 @import "cmps/ReviewEdit";
