--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -1,8 +1,8 @@
 .search-list {
 
-  display: flex;
-  justify-content: start;
-  flex-wrap: wrap;
+  display: grid;
+  grid-auto-flow: column;
+
 
   li {
     border-radius: 10px;
