--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -35,6 +35,7 @@
 @import "cmps/ReviewEdit";
 @import "cmps/ReviewList";
 @import "cmps/ReviewPreview";
+@import "cmps/StationEditModal";
 // @import "cmps/CarList";
 // @import "cmps/CarPreview";
 
