--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -18,12 +18,13 @@ $gray4: #333;
 $background-black: #191414;
 $green: #1DB954;
 $white: #FFFFFF;
+$white-hover: #dadada;
 $grey-light: #B3B3B3;
 $grey-medium: #535353;
-$grey-dark: #282828;
+$grey-dark: #343434;
 $dark-mode-background: #121212;
 $dark-mode-hover: #1A1A1A;
-$dark-mode-active: #282828;
+$dark-mode-active: #272727;
 $primary-accent: #1ED760;
 $secondary-accent: #1DB954;
 $danger-red: #E91429;
