Add create new station

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,11 +31,12 @@
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
 
-@import "cmps/CarFilter";
-@import "cmps/ReviewEdit";
-@import "cmps/ReviewList";
-@import "cmps/ReviewPreview";
-@import "cmps/StationEditModal";
+@import "cmps/CarFilter.scss";
+@import "cmps/ReviewEdit.scss";
+@import "cmps/ReviewList.scss";
+@import "cmps/ReviewPreview.scss";
+@import "cmps/StationEditModal.scss";
+@import "cmps/EditOptions.scss";
 // @import "cmps/CarList";
 // @import "cmps/CarPreview";
 
