--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -1,30 +1,45 @@
-.search-list {
+.search-section {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  background-color: #121212; /* Dark background for a Spotify-like look */
+  color: #ffffff; /* White text on a dark background */
 
-  display: grid;
-  grid-auto-flow: column;
+  .search-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 300px)); /* Responsive grid */
+    grid-gap: 0.5rem;
+    list-style: none;
+    padding: 0;
+    width: 100%; /* Ensure the grid takes up the full width of the container */
+    /* Limit the maximum width */
+    justify-items: stretch; /* Stretch the items to fill the grid cells */
 
+    li {
+      min-height: 7rem; /* Set the minimum height */
+      max-height: 9rem; /* Set the maximum height */
+      width: 100%; /* Ensure the li elements take up the full width of their grid cells */
+      border-radius: 8px;
+      padding: 1rem;
+      display: flex;
+      justify-content: left;
+      align-items: start;
+      background-color: #282828; /* Dark grey background for list items */
+      color: white;
+      font-weight: bold;
+      text-align: center;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
 
-  li {
-    border-radius: 10px;
-    margin: 1em;
-    padding: 1em;
-    flex-grow: 1;
-    height: 6em;
-    justify-content: center;
-    align-content: center;
-  }
+      &:hover {
+        transform: scale(1.05);
+        background-color: #333333; /* Slightly lighter on hover */
+      }
+    }
 
-  li:first-child {
-    background-color: rgba(19, 135, 135, 0.696);
-  }
-
-  li:nth-child(2) {
-    background-color: rgb(13, 43, 123);
-  }
-
-  a {
-    text-decoration: none;
-    color: white;
-    align-self: center;
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
   }
 }
