--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -37,6 +37,7 @@
 @import "cmps/ReviewPreview.scss";
 @import "cmps/StationEditModal.scss";
 @import "cmps/EditOptions.scss";
+@import "cmps/PlayingAnimation.scss";
 // @import "cmps/CarList";
 // @import "cmps/CarPreview";
 
