--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -1,6 +1,6 @@
 .home-container{
     // background: linear-gradient(0deg, $background-black 60%, rgb(30, 0, 69) 90%, #4B0E8B 100%);   
-     height:80vh;
+    height: calc(100vh - 160px);
     overflow-y: auto;
     border-radius: 0.5rem;
     container-type: inline-size;
