--- a/src/assets/styles/cmps/StationEditModal.scss
+++ b/src/assets/styles/cmps/StationEditModal.scss
@@ -50,9 +50,43 @@
         // gap: 0.1em;
       align-items: center;
       width: 100%;
+      
+      .img-backshadow-container{
+        background-color: rgba(0, 0, 0, 0.664);
+        width: calc(100% - 0.8em);
+        height: 100%;
+        position: absolute;
+        border-radius: 8px;
+        display: none;
+        align-items: center;
 
+
+        div{
+          margin: 0 auto;
+          flex-direction: column;
+          align-items: center;
+          justify-items: center;
+
+          font-size: 1.5em;
+          font-family: 'GothamBook';
+
+          svg{
+            font-size: 3em;
+          }
+        }
+      }
       .img-container{
-          
+        position: relative;
+        &:hover{
+          .img-backshadow-container{
+            display: flex;
+            div{
+
+              display: flex;
+            }
+
+          }
+        }
               img {
                 width: 95%;
                 height: 95%;
