Add default guest user login

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -50,3 +50,4 @@
 @import "cmps/LikedSongs.scss";
 @import "pages/StationDetails.scss";
 @import "pages/ItemDetails.scss";
+@import "pages/LoginSignup.scss";
