--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -216,3 +216,10 @@
         }
     }
 }
+
+.user-container{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    gap: 0.5em;
+}
