--- a/src/assets/styles/cmps/UserMsg.scss
+++ b/src/assets/styles/cmps/UserMsg.scss
@@ -1,21 +1,28 @@
 .user-msg {
     position: fixed;
-    top: 60px;
-    right: .2em;
+    top: 5em;
+    right: 0.5em;
 
     display: flex;
     align-items: center;
 
-    padding: .2em;
-    padding-inline-end: 20px;
+    padding: 0.5em;
+    // margin-inline-end: 20px;
     background-color: grey;
 
-    color:white;
+    color:$white;
     font-size: .9em;
 
-    opacity: 0;
-    translate: 150%;
+    // opacity: 0;
+    opacity: 1;
+    // translate: 150%;
     transition: 600ms;
+
+
+    // width: 300px;
+    // height: 300px;
+    border-radius: 5px;
+
 }
 
 .user-msg.visible {
@@ -32,8 +39,9 @@
 }
 
 .user-msg.success {
-    background-color: rgb(41, 189, 73);
+    background-color: $success-green;
+
 }
 .user-msg.error {
-    background-color: rgb(216, 59, 59);
+    background-color: $danger-red;
 }
